
cmake_minimum_required(VERSION 3.15)

project(cpa_2016_example_questions)

set(CMAKE_CXX_STANDARD 20)

add_executable(cpa_2016_example_questions

        #        source_code/question_01.cpp
        #        source_code/question_02.cpp
        #        source_code/question_03.cpp
        #        source_code/question_04.cpp
        #        source_code/question_05.cpp
        #        source_code/question_06.cpp
        #        source_code/question_07.cpp
        #        source_code/question_08.cpp
        #        source_code/question_09.cpp
        source_code/question_10.cpp

        )